<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dromara.sms4j</groupId>
    <artifactId>sms4j</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>sms4j</name>
    <description>让发送短信变的更简单</description>
    <url>https://gitee.com/dromara/sms4j</url>

    <modules>
        <module>sms4j-comm</module>
        <module>sms4j-api</module>
        <module>sms4j-provider</module>
        <module>sms4j-core</module>
        <module>sms4j-spring-boot-starter</module>
        <module>sms4j-solon-plugin</module>
        <module>sms4j-spring-boot-example</module>
        <module>sms4j-javase-plugin</module>
        <module>sms4j-Email-plugin</module>
        <module>sms4j-oa-plugin</module>
        <module>sms4j-email-jakarta</module>
    </modules>

    <!-- 开源协议 Apache 2.0 -->
    <licenses>
        <license>
            <name>Apache 2</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <!-- 作者信息 -->
    <developers>
        <developer>
            <name>wind</name>
            <email>wzsf1810@qq.com</email>
        </developer>
    </developers>

    <!-- 仓库信息 -->
    <scm>
        <tag>master</tag>
        <url>https://gitee.com/dromara/sms4j.git</url>
        <connection>scm:git:https://gitee.com/dromara/sms4j.git</connection>
        <developerConnection>scm:git:https://gitee.com/dromara/sms4j.git</developerConnection>
    </scm>

    <properties>
        <revision>3.0.1-SNAPSHOT</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring.boot.version>2.7.18</spring.boot.version>
        <solon.version>2.6.5</solon.version>
        <redisson.version>3.17.0</redisson.version>
        <jdcloud.version>1.3.3</jdcloud.version>
        <hutool.version>5.8.25</hutool.version>
        <xmlblend.version>2.3.0</xmlblend.version>
        <activation.version>1.1.1</activation.version>
        <mail.version>1.6.2</mail.version>
        <sunactivation.version>1.2.0</sunactivation.version>
        <snakeyaml.version>2.0</snakeyaml.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- SpringBoot的依赖配置-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
                <exclusions>
                    <exclusion>
                        <groupId>jakarta.activation</groupId>
                        <artifactId>jakarta.activation-api</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>jakarta.mail</groupId>
                        <artifactId>jakarta.mail-api</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring.boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-spring-boot-starter</artifactId>
                <version>${revision}</version>
            </dependency>

            <!--核心模块-->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-core</artifactId>
                <version>${revision}</version>
            </dependency>

            <!--通用模块-->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-comm</artifactId>
                <version>${revision}</version>
            </dependency>

            <!--api模块-->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-api</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- 短信厂商对接模块（国内短信） -->
            <dependency>
                <groupId>org.dromara.sms4j</groupId>
                <artifactId>sms4j-provider</artifactId>
                <version>${revision}</version>
            </dependency>

            <!-- 京东云短信依赖 -->
            <dependency>
                <groupId>com.jdcloud.sdk</groupId>
                <artifactId>sms</artifactId>
                <version>${jdcloud.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${xmlblend.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${xmlblend.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-core</artifactId>
                <version>${xmlblend.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${activation.version}</version>
            </dependency>

            <!-- hutool 的依赖配置-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-bom</artifactId>
                <version>${hutool.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.sun.mail</groupId>
                <artifactId>javax.mail</artifactId>
                <version>${mail.version}</version>
            </dependency>

            <dependency>
                <groupId>com.sun.activation</groupId>
                <artifactId>javax.activation</artifactId>
                <version>${sunactivation.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

    </dependencies>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <!-- Source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9.1</version>
                <configuration>
                    <show>private</show>
                    <nohelp>true</nohelp>
                    <charset>UTF-8</charset>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <additionalparam>-Xdoclint:none</additionalparam>
                    <!-- TODO 临时解决不规范的javadoc生成报错,后面要规范化后把这行去掉 -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--            &lt;!&ndash; GPG &ndash;&gt;-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-gpg-plugin</artifactId>-->
            <!--                <version>1.6</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>verify</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>sign</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <fork>true</fork>
                    <verbose>true</verbose>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!--Release -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!-- version number -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
